--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,7 @@ Depends:
   R (>= 4.0),
   DatabaseConnector (>= 3.0.0)
 Imports:
-	SqlRender (>= 1.6.6)
-RoxygenNote: 7.1.1
+	SqlRender (>= 1.6.6),
+	stringr,
+	dplyr
+RoxygenNote: 7.1.2
