--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(createDomaincrit)
 export(createIndexes)
 export(createSubsetCdmFromCohort)
 export(translateToCustomVaSql)
+export(translateToCustomVaSqlText)
 export(writeCohortSql)
 import(DatabaseConnector)
 import(SqlRender)
